@@ -2,8 +2,15 @@
 
 set -e;
 /sbin/vlad inittab
-echo "Now run \"vlad hook\" and reboot."
-echo ""
-echo "IMPORTANT: run \"vlad unhook\", reboot, then \"vlad unhook\" again"
-echo "before removing vera with removepkg, or before updating vera or sysvinit"
-echo "packages."
+if test -f /sbin/init.init
+then
+    if /sbin/vlad vera-up
+    then
+	/sbin/vlad reexec
+    fi
+else
+    echo "Now run \"vlad hook\" and reboot."
+    echo ""
+    echo "IMPORTANT: run \"vlad unhook\", reboot, then \"vlad unhook\" again"
+    echo "before removing vera with removepkg, or before updating sysvinit."
+fi
